[package]

name = "jsonrpc"
version = "0.1.0"
license = "MIT"
authors = ["Marcin Kocot <kociolek.farfocle@gmail.com>"]
documentation = "https://mkocot.github.io/jsonrpc/jsonrpc/index.html"
repository = "https://github.com/mkocot/jsonrpc"
readme = "README.md"

[dependencies]
rustc-serialize = "*"
log = "0.3.2"
clippy = {version = "0.0.21", optional = true}

[features]
default = []
nightly = []
dev = ["clippy"]
